addition of routers

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,9 @@
       <a class="navbar-brand" href="#">Github Search</a>
    </div>
 
-      <a routerLink='/my-profile' routerLinkActive='active'>My Profile</a>
+      <a routerLink='/my-profiles' routerLinkActive='active'>My Profile</a>
 
   </div>
 </nav>
-<app-my-profiles></app-my-profiles>
+
+<router-outlet></router-outlet>
