addition of styles to myprofile

--- a/src/app/my-profiles/my-profiles.component.html
+++ b/src/app/my-profiles/my-profiles.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="search">
-    <a routerLink='/search' routerLinkActive='active'>Search an account</a>
+    <a routerLink='/search' routerLinkActive='active'>look an account</a>
     </div>
     <div *ngIf="users">
           <div class="row">
