--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
       <a class="navbar-brand" href="#">Github Search</a>
    </div>
 
-      <a routerLink='/my-profiles' routerLinkActive='active'>My Profile</a>
+      <a routerLink='/my-profiles' routerLinkActive='active'>My Github profile</a>
 
   </div>
 </nav>
