--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <div class="container-fluid">
 
     <div class="navbar-heading">
-      <a class="navbar-brand" href="#">Github Search</a>
+      <a class="navbar-brand" href="#">Github Search section</a>
    </div>
 
       <a routerLink='/my-profiles' routerLinkActive='active'>My Github profile</a>
