adding tags to repos component

--- a/src/app/repos/repos.component.html
+++ b/src/app/repos/repos.component.html
@@ -10,7 +10,7 @@
   
       <p class="creation-date"><b class="dates">Date created:</b> &nbsp;  {{repositoryService.repo[i].created_at|date}}</p>
   
-    <p>  <a href="{{repositoryService.repo[i].html_url}}" target="_blank" class="btn1 ">View this project on Github &nbsp;<span class="glyphicon glyphicon-share-alt"></span></a>
+    <p>  <a href="{{repositoryService.repo[i].html_url}}" target="_blank" class="btn1 ">log into the particular repository &nbsp;<span class="glyphicon glyphicon-share-alt"></span></a>
   
       <a href="{{repositoryService.repo[i].homepage}}" target="_blank" *ngIf="repositoryService.repo[i].homepage" class="btn btn-sm btn-success pull-right buttons">View Deployed Page &nbsp;<span class="glyphicon glyphicon-share-alt"></span></a></p>
     </div>
