--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <h1>Github-info page</h1>
 <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
+  <div class="kenny">
 
-    <div class="navbar-heading">
+    <div class="Kennedy">
       <a class="navbar-brand" href="#">Github Search section</a>
    </div>
 
