removal of tags

--- a/src/app/my-profiles/my-profiles.component.html
+++ b/src/app/my-profiles/my-profiles.component.html
@@ -15,7 +15,7 @@
               </ul>
             </div>
             </div>
-            <div class="col-md-2">
+            <div class="addition">
     
             </div>
             <div class="col-sm-5" id="repo-part">
@@ -30,7 +30,7 @@
     
                 <br>
                 <br>
-                <p><a href="{{users.html_url}}" target="_blank" class="btn btn-success btn-sm" id="view"> search for the particular repositories on Github &nbsp; <span class="glyphicon glyphicon-share-alt"></span></a></p>
+                <p><a href="{{users.html_url}}" target="_blank" class="btn btn-success btn-sm" id="view"> search for the particular repositories on Github &nbsp; <span class="kelly"></span></a></p>
     
     
     
