--- a/src/app/my-profiles/my-profiles.component.html
+++ b/src/app/my-profiles/my-profiles.component.html
@@ -30,7 +30,7 @@
     
                 <br>
                 <br>
-                <p><a href="{{users.html_url}}" target="_blank" class="btn btn-success btn-sm" id="view"> search for the particular repositories on Github &nbsp; <span class="kelly"></span></a></p>
+                <p><a href="{{users.html_url}}" target="_blank" class="btn btn-success btn-sm" id="view"> search for the particular repositories on Github pages &nbsp; <span class="kelly"></span></a></p>
     
     
     
